[project]
name = "zero-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "jupynium>=0.2.7",
    "jupyter-console>=6.6.3",
    "nbclassic>=1.3.3",
    "notebook>=7.5.1",
    "pip>=25.3",
    "pydoclint>=0.8.3",
    "ty>=0.0.6",
]
