[project]
name = "zero-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "jupynium>=0.2.7",
    "jupyter-console>=6.6.3",
    "nbclassic>=1.3.3",
    "notebook>=7.5.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.6",
    "pydoclint>=0.8.3",
    "pip>=25.3",
    "basedpyright>=1.36.2",
]
